WEB-5835 fixes tab and filter layout issues (#62)
* WEB-5835 fixes tab and filter layout issues

* WEB-5835 revert package

* WEB-5835 ie11 fixes

* WEB-5835 modal headers flex fix

--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -20,7 +20,6 @@
 
     figure {
         @include align-items(center);
-        @include justify-content(flex-end);
         @include transition(all $transition-4);
         display: none;
         left: 100%;
@@ -75,11 +74,6 @@
             width: 100%;
             position: relative;
             z-index: 2;
-        }
-        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-            figcaption {
-                margin-left: 0;
-            }
         }
         .slide-copy {
             color: $color-white;
