--- a/src/styles/_filterGroups.scss
+++ b/src/styles/_filterGroups.scss
@@ -43,6 +43,9 @@
                 padding-right: 0;
             }
         }
+        .selectedFilters + .vdp-filter-group {
+            padding-left: 0;
+        }
     }
 }
 
