--- a/src/styles/_heros.scss
+++ b/src/styles/_heros.scss
@@ -118,11 +118,14 @@ $overlayGradient: rgba($color-black, 0), $color-black;
 }
 .vdp-page-hero__tabs {
     margin: 0 -#{$sizing-MD} !important;
-    overflow: scroll;
     padding: 0 $sizing-MD !important;
     position: relative;
     z-index: 3;
-    -webkit-overflow-scrolling: touch;
+
+    @include size-only-mobile {
+        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+    }
 }
 .vdp-page-hero__breadcrumbs {
     font-size: $font-size-SM;
